--- a/Personal Portfolio/Bitcoin Price Prediction Model.ipynb
+++ b/Personal Portfolio/Bitcoin Price Prediction Model.ipynb
@@ -5,7 +5,7 @@
    "id": "ec87f037",
    "metadata": {},
    "source": [
-    "# Affaan's Bitcoin Price Predictor Using Time-Series and SVR / Random Forest"
+    "# Affaan's Bitcoin Price Predictor using Prophet for Time Series"
    ]
   },
   {
@@ -18,6 +18,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from fbprophet import Prophet\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.metrics import mean_squared_error\n",
@@ -80,66 +81,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set the date as the index\n",
-    "bitcoin = bitcoin.set_index('Date')\n",
+    "# Train/test split\n",
+    "split_date = '2021-01-01'\n",
+    "train = bitcoin.loc[bitcoin.index <= split_date]\n",
+    "test = bitcoin.loc[bitcoin.index > split_date]\n",
     "\n",
-    "# Split the data into training and testing sets\n",
-    "train_size = int(len(bitcoin) * 0.8)\n",
-    "train_data = bitcoin[:train_size]\n",
-    "test_data = bitcoin[train_size:]\n",
+    "# Initialize model parameters\n",
+    "smoothing_level = 0.2\n",
+    "smoothing_slope = 0.05\n",
+    "seasonal_period = 365\n",
     "\n",
-    "# Scale the data\n",
-    "scaler = MinMaxScaler()\n",
-    "train_data = scaler.fit_transform(train_data)\n",
-    "test_data = scaler.transform(test_data)\n",
+    "# Set up cross-validation using TimeSeriesSplit\n",
+    "tscv = TimeSeriesSplit(n_splits=5)\n",
     "\n",
-    "# Split the data into features (X) and target (y)\n",
-    "X_train = train_data[:, :-1]\n",
-    "y_train = train_data[:, -1]\n",
-    "X_test = test_data[:, :-1]\n",
-    "y_test = test_data[:, -1]\n",
+    "# Fit model and make predictions using cross-validation\n",
+    "rmse_scores = []\n",
+    "for train_index, test_index in tscv.split(train):\n",
+    "    # Train/validation split for cross-validation\n",
+    "    cv_train, cv_val = train.iloc[train_index], train.iloc[test_index]\n",
+    "    \n",
+    "    # Fit model to training data\n",
+    "    model = ExponentialSmoothing(cv_train, trend='add', seasonal='add', seasonal_periods=seasonal_period)\n",
+    "    fitted_model = model.fit(smoothing_level=smoothing_level, smoothing_slope=smoothing_slope)\n",
+    "    \n",
+    "    # Make predictions on validation data\n",
+    "    preds = fitted_model.forecast(len(cv_val))\n",
+    "    \n",
+    "    # Calculate RMSE for validation period\n",
+    "    rmse = np.sqrt(mean_squared_error(cv_val, preds))\n",
+    "    rmse_scores.append(rmse)\n",
     "\n",
-    "# Define the Neural Network model\n",
-    "model = tf.keras.Sequential([\n",
-    "    tf.keras.layers.Dense(64, activation='relu', input_shape=(X_train.shape[1],)),\n",
-    "    tf.keras.layers.Dense(64, activation='relu'),\n",
-    "    tf.keras.layers.Dense(1)\n",
-    "])\n",
+    "# Print average RMSE score\n",
+    "print('Cross-validation RMSE scores:', rmse_scores)\n",
+    "print('Average RMSE score:', np.mean(rmse_scores))\n",
     "\n",
-    "# Compile the model\n",
-    "model.compile(optimizer='adam', loss='mse')\n",
+    "# Fit model to entire training set and make predictions on test set\n",
+    "model = ExponentialSmoothing(train, trend='add', seasonal='add', seasonal_periods=seasonal_period)\n",
+    "fitted_model = model.fit(smoothing_level=smoothing_level, smoothing_slope=smoothing_slope)\n",
+    "preds = fitted_model.forecast(len(test))\n",
     "\n",
-    "# Train the model on the training set\n",
-    "history = model.fit(X_train, y_train, epochs=50, batch_size=32, validation_split=0.2)\n",
-    "\n",
-    "# Make predictions on the testing set\n",
-    "y_pred = model.predict(X_test)\n",
-    "\n",
-    "# Scale the predictions back to the original scale\n",
-    "y_pred = scaler.inverse_transform(np.concatenate((X_test, y_pred), axis=1))[:, -1]\n",
-    "y_test = scaler.inverse_transform(np.concatenate((X_test, y_test.reshape(-1, 1)), axis=1))[:, -1]\n",
-    "\n",
-    "# Evaluate the model performance\n",
-    "rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
-    "print('Root Mean Squared Error:', rmse)\n",
-    "\n",
-    "# Plot the training and validation loss\n",
-    "plt.plot(history.history['loss'], label='Training Loss')\n",
-    "plt.plot(history.history['val_loss'], label='Validation Loss')\n",
+    "# Plot actual vs. predicted values\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(train.index, train, label='Training set')\n",
+    "plt.plot(test.index, test, label='Test set')\n",
+    "plt.plot(preds.index, preds, label='Predictions')\n",
     "plt.legend()\n",
-    "plt.title('Training and Validation Loss')\n",
-    "plt.xlabel('Epoch')\n",
-    "plt.ylabel('Loss')\n",
-    "plt.show()\n",
-    "\n",
-    "# Plot the actual data and the predictions\n",
-    "fig, ax = plt.subplots(figsize=(10, 6))\n",
-    "ax.plot(bitcoin.index, bitcoin['Close'], label='Actual')\n",
-    "ax.plot(test_data[:, -2], y_pred, label='Predicted')\n",
-    "ax.legend(loc='upper left')\n",
-    "plt.title('Bitcoin Price Prediction')\n",
+    "plt.title('Bitcoin Price - Actual vs. Predicted (Holt\\'s Linear Exponential Smoothing)')\n",
     "plt.xlabel('Date')\n",
-    "plt.ylabel('Price')\n",
+    "plt.ylabel('Price (USD)')\n",
     "plt.show()\n"
    ]
   }
